--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ul>
     
                     <li class="escritas"> <a href="https://viacep.com.br/" target="_blank">Documentação </a></li>
-                    <li class="escritas"> <a href="" target="">Exemplo </a></li>
+                    <li class="escritas"> <a href="https://viacep.com.br/ws/01001000/json/" target="_blank">Exemplo </a></li>
                     
                 </ul>
             </nav>
